<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/a_specs"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisciplineSpecificationsActivity">

    <TextView
        android:id="@+id/specs_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specs_title"
        android:textSize="24sp"
        android:layout_marginTop="-650dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/specs_discname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="-550dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/specs_prompt_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specs_day"
        android:textSize="20sp"
        android:layout_marginTop="-400dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <Spinner
        android:id="@+id/specs_day"
        android:layout_width="200sp"
        android:layout_height="40sp"
        android:layout_marginTop="-350dp"
        android:entries="@array/specs_days"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/specs_prompt_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specs_time"
        android:textSize="20sp"
        android:layout_marginTop="-250dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/specs_time"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/specs_hint_time"
        android:inputType="time"
        android:layout_marginTop="-200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/specs_prompt_teacher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specs_teacher"
        android:textSize="20sp"
        android:layout_marginTop="-100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/specs_teacher"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/specs_hint_teacher"
        android:layout_marginTop="-50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/specs_prompt_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specs_comment"
        android:textSize="20sp"
        android:layout_marginTop="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/specs_comment"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:hint="@string/specs_hint_comment"
        android:layout_marginTop="110dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.widget.Button
        android:id="@+id/specs_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specs_button"
        android:textSize="24sp"
        android:layout_marginTop="650dp"
        android:background="@drawable/stylish_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>